package server.protobuf.messages;

import "FlightsMessage.proto";
import "CrunchState.proto";

message FlightsAndManifestsDiffMessage {
    optional FlightsDiffMessage flightsDiffMessage = 1;
    optional SplitsDiffMessage splitsDiffMessage = 2;
    optional int64 CreatedAt = 3;
}

message FlightsDiffMessage {
    repeated int32 removals = 1;
    repeated FlightUpdateMessage updates = 2;
}

message FlightUpdateMessage {
    optional int32 id = 1;
    optional FlightMessage flight = 2;
}

message SplitsDiffMessage {
    repeated string removals = 1;
    repeated SplitsUpdateMessage updates = 2;
}

message SplitsUpdateMessage {
    optional string id = 1;
    optional SplitMessage splits = 2;
}
